# rite-cloud

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: rust.yml
async-sqlx-session/: Cargo.toml  README.md
install-files/: rite-cloud.service  start-rite-cloud  start-rite-cloud.sh
res/: alert.css  alert.js  blog-tutorial.html  landing.html  style.css
res/docs/: index.html
src/: main.rs
src/rite/: auth.rs  config.rs  middleware.rs  mod.rs  oauth_config.rs  routes.rs
src/rite/routes/: api.rs  blog.rs  clients.rs  docs.rs
templates/: 500.html  base.html  blog.html  confirm.html  index.html  link_client.html  manage_blog.html  view_clients.html  view_document.html  view_documents.html
