[package]
name = "rite-cloud"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
oauth2 = { version = "3.0", features = [ "curl" ] }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
surf = { version = "2.1.0" }
http-types = "2.12"
tera = "1"
tide-tera = "0.2"
hyper-native-tls = "0.3"